sample/gitops/hello-world-flask/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-flask-svc
  namespace: user07
spec:
  ports:
  - port: 80
    targetPort: 8082
  selector:
    app: hello-flask
