sample/gitops/hello-world-flask/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-flask-ingress
  namespace: user07
spec:
  ingressClassName: nginx
  rules:
  - host: user07-python.com
    http:
      paths:
      - backend:
          service:
            name: hello-flask-svc
            port:
              number: 80
        path: /
        pathType: Prefix
